--- a/assets/index/index.html
+++ b/assets/index/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monisha B G | Portfolio</title>
+    <title>Monisha BG | Portfolio</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/assets/styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <a href="#" class="logo">M<span>BG</span></a>
+            <a href="#" class="logo">MBG</a>
             <nav class="navbar">
                 <a href="#home" class="active">Home</a>
                 <a href="#about">About</a>
@@ -25,71 +22,71 @@
         </div>
     </header>
 
-    <section class="home" id="home">
+    <section class="hero" id="home">
         <div class="container">
-            <div class="home-content">
+            <div class="hero-content">
                 <h3>Hello, I'm</h3>
                 <h1>Monisha B G</h1>
-                <h2>A <span class="typed-text"></span></h2>
-                <p>Passionate student developer with a drive to create innovative solutions and continuously expand my technical expertise.</p>
+                <h2>Student Developer</h2>
+                <p>Passionate about technology and eager to create innovative solutions through code.</p>
                 
                 <div class="social-media">
-                    <a href="#" aria-label="LinkedIn"><i class='bx bxl-linkedin'></i></a>
-                    <a href="#" aria-label="GitHub"><i class='bx bxl-github'></i></a>
-                    <a href="#" aria-label="Instagram"><i class='bx bxl-instagram-alt'></i></a>
-                    <a href="#" aria-label="YouTube"><i class='bx bxl-youtube'></i></a>
+                    <a href="https://www.linkedin.com/in/monisha-b-g-375455259" aria-label="LinkedIn"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/monishabg" aria-label="GitHub"><i class='bx bxl-github'></i></a>
+                    <a href="https://youtube.com/@monishabg2704" aria-label="YouTube"><i class='bx bxl-youtube'></i></a>
                 </div>
 
-                <div class="btn-group">
-                    <a href="#" class="btn primary">Download CV</a>
-                    <a href="#contact" class="btn secondary">Hire Me</a>
+                <div class="cta-buttons">
+                    <a href="https://github.com/monishabg" class="btn">Download CV</a>
+                    <a href="#contact" class="btn btn-outline">Hire Me</a>
                 </div>
             </div>
 
-            <div class="home-image">
-                <div class="image-wrapper">
-                    <img src="/assets/images/hero.jpeg" alt="Monisha B G">
-                    <div class="tech-icons">
-                        <i class='bx bxl-html5'></i>
-                        <i class='bx bxl-css3'></i>
-                        <i class='bx bxl-javascript'></i>
-                        <i class='bx bxl-react'></i>
+            <div class="hero-image">
+                <div class="image-container">
+                    <img src="/assets/images/hero.jpeg" alt="Monisha B G" class="profile-img">
+                    <div class="tech-stack">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                        <span>Python</span>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="about" id="about">
+    <section class="about section" id="about">
         <div class="container">
             <div class="about-image">
                 <img src="/assets/images/about.jpg" alt="About Monisha">
             </div>
             <div class="about-content">
                 <h2 class="section-title">About <span>Me</span></h2>
-                <h3>Emerging Developer & Tech Enthusiast</h3>
-                <p>I'm a dedicated student developer currently expanding my knowledge in web and software development. My journey in technology began with a curiosity about how things work, which has evolved into a passion for creating digital solutions.</p>
-                <p>When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or mentoring fellow students. I believe in continuous learning and pushing boundaries to create impactful work.</p>
-                <div class="skills-summary">
-                    <div class="skill-item">
-                        <span class="skill-name">Web Development</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 85%"></div>
+                <h3>Tech Enthusiast & Developer</h3>
+                <p>I'm a dedicated student developer with a passion for creating digital solutions. My journey in technology began with curiosity and has grown into a commitment to mastering web and software development.</p>
+                <p>When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or sharing my knowledge with fellow developers.</p>
+                <div class="about-details">
+                    <div class="detail-item">
+                        <i class='bx bx-code'></i>
+                        <div>
+                            <h4>2+ Years</h4>
+                            <p>Development Experience</p>
                         </div>
                     </div>
-                    <div class="skill-item">
-                        <span class="skill-name">Software Development</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 75%"></div>
+                    <div class="detail-item">
+                        <i class='bx bx-check-shield'></i>
+                        <div>
+                            <h4>10+ Projects</h4>
+                            <p>Completed</p>
                         </div>
                     </div>
                 </div>
-                <a href="#" class="btn primary">View Full Resume</a>
             </div>
         </div>
     </section>
 
-    <section class="skills" id="skills">
+    <section class="skills section" id="skills">
         <div class="container">
             <h2 class="section-title">My <span>Skills</span></h2>
             <div class="skills-container">
@@ -102,20 +99,8 @@
                         <li>HTML5 & CSS3</li>
                         <li>JavaScript (ES6+)</li>
                         <li>React.js</li>
+                        <li>Node.js</li>
                         <li>Responsive Design</li>
-                    </ul>
-                </div>
-
-                <div class="skill-card">
-                    <div class="skill-icon">
-                        <i class='bx bx-code-curly'></i>
-                    </div>
-                    <h3>Software Development</h3>
-                    <ul>
-                        <li>Python</li>
-                        <li>Java</li>
-                        <li>C++</li>
-                        <li>Data Structures</li>
                     </ul>
                 </div>
 
@@ -123,115 +108,125 @@
                     <div class="skill-icon">
                         <i class='bx bx-cloud'></i>
                     </div>
-                    <h3>Cloud & DevOps</h3>
+                    <h3>Cloud Technology</h3>
                     <ul>
                         <li>AWS Fundamentals</li>
-                        <li>Docker Basics</li>
-                        <li>Git Version Control</li>
-                        <li>CI/CD Concepts</li>
+                        <li>Serverless Architecture</li>
+                        <li>CI/CD Pipelines</li>
+                        <li>Containerization</li>
+                        <li>Cloud Security</li>
+                    </ul>
+                </div>
+
+                <div class="skill-card">
+                    <div class="skill-icon">
+                        <i class='bx bx-chip'></i>
+                    </div>
+                    <h3>Software Development</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Java</li>
+                        <li>Data Structures</li>
+                        <li>Algorithms</li>
+                        <li>Debugging</li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="portfolio" id="portfolio">
+    <section class="portfolio section" id="portfolio">
         <div class="container">
             <h2 class="section-title">Featured <span>Projects</span></h2>
             <div class="portfolio-container">
-                <div class="portfolio-card">
-                    <img src="/assets/images/portfolio1.webp" alt="Project 1">
+                <div class="portfolio-item">
+                    <img src="/assets/images/ecom.jpg" alt="E-Commerce Platform">
                     <div class="portfolio-overlay">
                         <div class="portfolio-info">
-                            <h3>E-Commerce Website</h3>
-                            <p>A fully responsive online store with cart functionality and payment integration.</p>
-                            <div class="portfolio-tech">
-                                <span>React</span>
-                                <span>Node.js</span>
-                                <span>MongoDB</span>
-                            </div>
+                            <h3>E-Commerce Platform</h3>
+                            <p>Full-stack e-commerce solution with React and Node.js</p>
                             <div class="portfolio-links">
-                                <a href="#" aria-label="Live Demo"><i class='bx bx-link-external'></i></a>
-                                <a href="#" aria-label="View Code"><i class='bx bxl-github'></i></a>
+                                <a href="#" aria-label="View Project"><i class='bx bx-link-external'></i></a>
+                                <a href="https://github.com/monishabg" aria-label="GitHub Repository"><i class='bx bxl-github'></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-card">
-                    <img src="/assets/images/portfolio2.jpeg" alt="Project 2">
+                <div class="portfolio-item">
+                    <img src="/assets/images/app.jpg" alt="Task Management App">
                     <div class="portfolio-overlay">
                         <div class="portfolio-info">
                             <h3>Task Management App</h3>
-                            <p>Productivity application for organizing tasks with drag-and-drop functionality.</p>
-                            <div class="portfolio-tech">
-                                <span>JavaScript</span>
-                                <span>Firebase</span>
-                                <span>Material UI</span>
-                            </div>
+                            <p>Productivity application with cloud synchronization</p>
                             <div class="portfolio-links">
-                                <a href="#" aria-label="Live Demo"><i class='bx bx-link-external'></i></a>
-                                <a href="#" aria-label="View Code"><i class='bx bxl-github'></i></a>
+                                <a href="#" aria-label="View Project"><i class='bx bx-link-external'></i></a>
+                                <a href="https://github.com/monishabg" aria-label="GitHub Repository"><i class='bx bxl-github'></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-card">
-                    <img src="/assets/images/portfolio3.png" alt="Project 3">
+                <div class="portfolio-item">
+                    <img src="/assets/images/weather.jpg" alt="Weather Dashboard">
                     <div class="portfolio-overlay">
                         <div class="portfolio-info">
                             <h3>Weather Dashboard</h3>
-                            <p>Real-time weather application with 5-day forecast and location search.</p>
-                            <div class="portfolio-tech">
-                                <span>API Integration</span>
-                                <span>Bootstrap</span>
-                                <span>Chart.js</span>
-                            </div>
+                            <p>Real-time weather data visualization</p>
                             <div class="portfolio-links">
-                                <a href="#" aria-label="Live Demo"><i class='bx bx-link-external'></i></a>
-                                <a href="#" aria-label="View Code"><i class='bx bxl-github'></i></a>
+                                <a href="#" aria-label="View Project"><i class='bx bx-link-external'></i></a>
+                                <a href="https://github.com/monishabg" aria-label="GitHub Repository"><i class='bx bxl-github'></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn primary">View All Projects</a>
         </div>
     </section>
 
-    <section class="contact" id="contact">
+    <section class="contact section" id="contact">
         <div class="container">
             <h2 class="section-title">Get In <span>Touch</span></h2>
             <div class="contact-container">
                 <div class="contact-info">
                     <h3>Let's talk about your project</h3>
-                    <p>I'm currently available for freelance work or internship opportunities. Feel free to reach out with any questions or just to say hello!</p>
+                    <p>I'm currently available for freelance work or internship opportunities. Feel free to reach out!</p>
+                    
                     <div class="contact-details">
                         <div class="detail-item">
                             <i class='bx bx-envelope'></i>
-                            <span>contact@monishabg.com</span>
+                            <div>
+                                <h4>Email</h4>
+                                <p>contact@monishabg.com</p>
+                            </div>
                         </div>
                         <div class="detail-item">
                             <i class='bx bx-phone'></i>
-                            <span>+1 (123) 456-7890</span>
+                            <div>
+                                <h4>Phone</h4>
+                                <p>+1 (123) 456-7890</p>
+                            </div>
                         </div>
                         <div class="detail-item">
                             <i class='bx bx-map'></i>
-                            <span>Bangalore, India</span>
+                            <div>
+                                <h4>Location</h4>
+                                <p>Bangalore, India</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+
                 <form class="contact-form">
                     <div class="form-group">
-                        <input type="text" placeholder="Full Name" required>
-                        <input type="email" placeholder="Email Address" required>
+                        <input type="text" placeholder="Your Name" required>
+                        <input type="email" placeholder="Your Email" required>
                     </div>
                     <div class="form-group">
                         <input type="text" placeholder="Subject">
                     </div>
                     <textarea placeholder="Your Message" rows="5" required></textarea>
-                    <button type="submit" class="btn primary">Send Message</button>
+                    <button type="submit" class="btn">Send Message</button>
                 </form>
             </div>
         </div>
@@ -241,15 +236,15 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-about">
-                    <a href="#" class="logo">M<span>BG</span></a>
-                    <p>Student developer passionate about creating innovative solutions and expanding technical knowledge.</p>
+                    <h3>MBG</h3>
+                    <p>Student Developer passionate about creating innovative digital solutions.</p>
                     <div class="footer-social">
-                        <a href="#" aria-label="LinkedIn"><i class='bx bxl-linkedin'></i></a>
-                        <a href="#" aria-label="GitHub"><i class='bx bxl-github'></i></a>
-                        <a href="#" aria-label="Instagram"><i class='bx bxl-instagram-alt'></i></a>
-                        <a href="#" aria-label="YouTube"><i class='bx bxl-youtube'></i></a>
+                        <a href="https://www.linkedin.com/in/monisha-b-g-375455259" aria-label="LinkedIn"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://github.com/monishabg" aria-label="GitHub"><i class='bx bxl-github'></i></a>
+                        <a href="https://youtube.com/@monishabg2704" aria-label="YouTube"><i class='bx bxl-youtube'></i></a>
                     </div>
                 </div>
+
                 <div class="footer-links">
                     <h3>Quick Links</h3>
                     <ul>
@@ -260,25 +255,24 @@
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
+
                 <div class="footer-newsletter">
                     <h3>Newsletter</h3>
-                    <p>Subscribe to my newsletter for the latest projects and updates.</p>
+                    <p>Subscribe to my newsletter for the latest updates.</p>
                     <form>
                         <input type="email" placeholder="Your Email">
                         <button type="submit"><i class='bx bx-send'></i></button>
                     </form>
                 </div>
             </div>
+
             <div class="footer-bottom">
                 <p>&copy; 2024 Monisha B G. All rights reserved.</p>
-                <a href="#home" class="back-to-top">
-                    <i class='bx bx-up-arrow-alt'></i>
-                </a>
+                <a href="#home" class="back-to-top"><i class='bx bx-up-arrow-alt'></i></a>
             </div>
         </div>
     </footer>
 
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="/assets/js/app.js"></script>
 </body>
 </html>
